# filetransfer

./: .gitignore  CMakeLists.txt  README.md  build.sh  index.html  install_dependencies.sh  package.json  tailwind.config.js
.github/workflows/: build.yml
gui/: main.cpp  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h
packaging/linux/: build-appimage.sh
packaging/macos/: Info.plist  build-dmg.sh
packaging/windows/: build-installer.bat  installer.nsi
src/: App.tsx  config.cpp  config.h  device_handler.h  index.css  ios_handler.cpp  ios_handler.h  main.cpp  mtp_handler.cpp  mtp_handler.h  photo_db.cpp  photo_db.h  photo_sync.cpp  photo_sync.h  transfer_queue.cpp  transfer_queue.h  types.ts  utils.cpp  utils.h  wpd_handler.cpp  wpd_handler.h
src-cpp/: config.cpp  device_handler.h  photo_db.cpp  photo_sync.h  utils.cpp
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: device.rs  main.rs  transfer.rs
src/components/: DeviceView.tsx  EmptyState.tsx  SettingsView.tsx  Sidebar.tsx  TransferView.tsx
